--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ esp-hub75 = { version = "0.8.0", features = ["esp32s3"] }
 embedded-graphics = "0.8.1"
 esp-radio = { version = "0.17.0", features = ["esp32s3", "wifi"] }
 esp-rtos = { version = "0.2.0", features = ["esp32s3", "esp-radio"] }
+esp-alloc = "0.9.0"
 
 
 [profile.dev]
