--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,10 @@ critical-section = "1.2.0"
 esp-println = { version = "0.16.1", features = ["esp32s3"] }
 esp-hub75 = { version = "0.8.0", features = ["esp32s3"] }
 embedded-graphics = "0.8.1"
-esp-radio = { version = "0.17.0", features = ["esp32s3", "wifi"] }
+esp-radio = { version = "0.17.0", features = ["esp32s3", "wifi", "unstable", "smoltcp"] }
 esp-rtos = { version = "0.2.0", features = ["esp32s3", "esp-radio"] }
 esp-alloc = "0.9.0"
+smoltcp = { version = "0.12.0", default-features = false, features = ["proto-ipv4", "socket-tcp", "medium-ethernet"] }
 
 
 [profile.dev]
