add code snippet to make an http request

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-st
   "dhcpv4",
   "tcp",
 ] }
+embedded-io = "0.6.1"
 
 
 [profile.dev]
