--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ esp-println = { version = "0.16.1", features = ["esp32s3"] }
 esp-hub75 = { version = "0.8.0", features = ["esp32s3"] }
 embedded-graphics = "0.8.1"
 esp-radio = { version = "0.17.0", features = ["esp32s3", "wifi", "unstable", "smoltcp"] }
-esp-rtos = { version = "0.2.0", features = ["esp32s3", "esp-radio"] }
+esp-rtos = { version = "0.2.0", features = ["esp32s3", "esp-radio", "embassy"] }
 esp-alloc = "0.9.0"
 smoltcp = { version = "0.12.0", default-features = false, features = ["proto-ipv4", "socket-tcp", "medium-ethernet"] }
 blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e", default-features = false, features = [
@@ -28,6 +28,9 @@ blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-st
 ] }
 embedded-io = "0.6.1"
 static_cell = "2.1.1"
+embassy-net = { version = "0.7.1", features = ["proto-ipv4", "medium-ethernet", "dhcpv4"]}
+embassy-executor = "0.9.1"
+embassy-time = "0.5.0"
 
 
 [profile.dev]
