--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,15 +22,11 @@ esp-radio = { version = "0.17.0", features = ["esp32s3", "wifi", "unstable", "sm
 esp-rtos = { version = "0.2.0", features = ["esp32s3", "esp-radio", "embassy"] }
 esp-alloc = "0.9.0"
 smoltcp = { version = "0.12.0", default-features = false, features = ["proto-ipv4", "socket-tcp", "medium-ethernet"] }
-blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e", default-features = false, features = [
-  "dhcpv4",
-  "tcp",
-] }
-embedded-io = "0.6.1"
 static_cell = "2.1.1"
-embassy-net = { version = "0.7.1", features = ["proto-ipv4", "medium-ethernet", "dhcpv4"]}
+embassy-net = { version = "0.7.1", features = ["proto-ipv4", "medium-ethernet", "dhcpv4", "dns", "tcp"]}
 embassy-executor = "0.9.1"
 embassy-time = "0.5.0"
+reqwless = { version = "0.13.0", default-features = false, features = ["embedded-tls"] }
 
 
 [profile.dev]
